--- a/task-1.html
+++ b/task-1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="dist/css/task-1.css">
+    <link rel="icon" href="src/img/favicon.png">
 </head>
 <body>
 
