Task 2 -> Added cash And Non-Cash Rate

--- a/task-2.html
+++ b/task-2.html
@@ -15,6 +15,13 @@
         <img src="src/img/privat.png" alt="">
         <h2>Конвертер валют</h2>
     </div>
+    <div class="rate-date">
+        <select id="rate">
+            <option value="cash">Нал.</option>
+            <option value="non-cash">Безнал.</option>
+        </select>
+        <span id="date"></span>
+    </div>
     <div class="content">
         <div class="changing">
             <p>Меняю</p>
