--- a/task-3.html
+++ b/task-3.html
@@ -10,7 +10,13 @@
 </head>
 <body>
 
+<div class="container">
+    <div class="wrapper">
+        <select id="branches-list"></select>
+    </div>
 
+    <div class="output"></div>
+</div>
 
 <script src="dist/js/task-3.js"></script>
 </body>
