--- a/task-3.html
+++ b/task-3.html
@@ -12,7 +12,34 @@
 
 <div class="container">
     <div class="wrapper">
-        <select id="branches-list"></select>
+        <img src="src/img/logo.png" alt="">
+        <select id="branches-list">
+            <option>Выберите область</option>
+            <option value="Запорожская">Запорожская</option>
+            <option value="Ивано-Франковская">Ивано-Франковская</option>
+            <option value="Львовская">Львовская</option>
+            <option value="Винницкая">Винницкая</option>
+            <option value="Волынская">Волынская</option>
+            <option value="Днепропетровская">Днепропетровская</option>
+            <option value="Донецкая">Донецкая</option>
+            <option value="Житомирская">Житомирская</option>
+            <option value="Закарпатская">Закарпатская</option>
+            <option value="Киевская">Киевская</option>
+            <option value="Кировоградская">Кировоградская</option>
+            <option value="Луганская">Луганская</option>
+            <option value="Николаевская">Николаевская</option>
+            <option value="Одесская">Одесская</option>
+            <option value="Полтавская">Полтавская</option>
+            <option value="Ровенская">Ровенская</option>
+            <option value="Сумская">Сумская</option>
+            <option value="Тернопольская">Тернопольская</option>
+            <option value="Харьковская">Харьковская</option>
+            <option value="Херсонская">Херсонская</option>
+            <option value="Хмельницкая">Хмельницкая</option>
+            <option value="Черкасская">Черкасская</option>
+            <option value="Черниговская">Черниговская</option>
+            <option value="Черновицкая">Черновицкая</option>
+        </select>
     </div>
 
     <div class="output"></div>
